fix banner overflow css

--- a/pegasus/sites.v3/code.org/public/css/homepage.css
+++ b/pegasus/sites.v3/code.org/public/css/homepage.css
@@ -41,6 +41,7 @@ body.modal-open .supreme-container{
 #homepage #hero {
   position: relative;
   width: 100%;
+  overflow: hidden;
 }
 
 #homepage #hero .widehero {
